--- a/app/src/main/res/layout/student_list_row.xml
+++ b/app/src/main/res/layout/student_list_row.xml
@@ -46,7 +46,7 @@
         app:layout_constraintStart_toEndOf="@+id/student_row_image_view"
         app:layout_constraintTop_toBottomOf="@+id/student_row_name_text_view" />
 
-    <!--Student Image-->
+    <!--Student checked-->
     <CheckBox
         android:id="@+id/student_row_check_box"
         android:layout_width="wrap_content"
