--- a/app/src/main/res/layout/activity_students_list_view.xml
+++ b/app/src/main/res/layout/activity_students_list_view.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentsListActivity">
+    tools:context=".StudentsRecyclerViewActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/students_recycler_view"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
